objects/ssot__LearnerProgram__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CatalogYear__c</fullName>
        <label>Catalog Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClassCohort__c</fullName>
        <label>Class Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedGraduationDate__c</fullName>
        <label>Expected Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Program Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProgramCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Program Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerAccountId__c</fullName>
        <label>Learner Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerContactId__c</fullName>
        <label>Learner Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanId__c</fullName>
        <label>Learning Program Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentLearnerProgramId__c</fullName>
        <label>Parent Learner Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817773008_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgram_LearnerAccountId_map__rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>LearnerProgram_LearnerAccountId_map__rel</relationshipLabel>
        <relationshipName>rel_1719817773008_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819806658_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgram_OpportunityId_map_Opp_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>LearnerProgram_OpportunityId_map_Opp_rel</relationshipLabel>
        <relationshipName>rel_1719819806658_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819891529_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgram_LearningProgramPlanId_rel</label>
        <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
        <relationshipLabel>LearnerProgram_LearningProgramPlanId_rel</relationshipLabel>
        <relationshipName>rel_1719819891529_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>